--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "react-inplace-editor",
-  "version": "1.0.0",
+  "version": "0.1.2",
   "description": "Made with create-react-library",
   "author": "",
   "license": "MIT",
   "repository": "/react-inplace-editor",
+  "keywords": [
+    "react",
+    "input",
+    "inplace-input",
+    "inline-input"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
